--- a/WebContent/AdminLogin.html
+++ b/WebContent/AdminLogin.html
@@ -24,7 +24,7 @@
 		color:red;
 	}
 	a:link{
-		color: green;
+		color: black;
 		text-decoration: none;
 	}
 	.tab{
@@ -32,7 +32,7 @@
 		background-color: #FFE5CC;
 		margin-left: 48%;
 		width:450px;
-		color:green;
+		color:black;
 		font-weight: bold;
 		font-style:normal;
 		text-align:center;
@@ -41,7 +41,7 @@
 		padding:10px;
 	}
 	.home{
-		border:1px black solid;
+		border:1px blue solid;
 		background-color: #ccffcc;
 		margin-left: 1%;
 		width:200px;
